--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -28,6 +28,7 @@
 				<th>{{'user.table.header.username' | translate}}</th>
 				<th>{{'user.table.header.role' | translate}}</th>
 				<th>{{'user.table.header.status' | translate}}</th>
+				<th>created date</th>
 				<th></th>
 			</tr>
 		</thead>
@@ -40,6 +41,7 @@
 					<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
 					<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled"></i>
 				</td>
+				<td>{{ u.createdDateTime | date : 'dd-MM-yyyy'}}</td>
 				<td>
 					<i class="fa fa-times fa-lg user-action-icon" ng-click="deleteUser(u.id)"></i>&emsp;
 					<i class="fa fa-edit fa-lg user-action-icon" ng-click="editUser(u)"></i>
