--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -1,5 +1,33 @@
 
 <div class="row col-lg-12">
+	<div class="well well-sm">
+		<form class="form-inline">
+		  <div class="form-group">
+		    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName" ng-keyup="search()">
+		  </div>
+		  <div class="form-group">
+		    <select name="roles" class="form-control" ng-model="$parent.formData.role" ng-change="search()">
+				<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
+				<option value="ROLE_USER">User</option>
+				<option value="ROLE_ADMIN">Admin</option>
+				<option value="ROLE_SALE">Sale</option>
+			</select>
+		  </div>
+		  <div class="form-group">
+                <label style="margin-left: 20px;">{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
+                <label class="radio-inline">
+                    <input type="radio" name="userStatus" value="1" ng-model="$parent.formData.status" ng-change="search()">{{'user.addpage.status.enable' | translate}}
+                </label>
+                <label class="radio-inline">
+                    <input type="radio" name="userStatus" value="0" ng-model="$parent.formData.status" ng-change="search()">{{'user.addpage.status.disable' | translate}}
+                </label>
+		   </div>
+		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+		</form>
+	</div>
+</div>
+
+<div class="row col-lg-12">
 	<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
 		<span class="input-group-addon" style="border: 0px; background: none;">
 			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
