--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -29,10 +29,9 @@
 				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
 				<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
 					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-					<option value="ROLE_USER">User</option>
-					<option value="ROLE_ADMIN">Admin</option>
-					<option value="ROLE_SALE">Sale</option>
-				</select>
+			      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
+			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+			    </select>
 			</div>
 			<div class="form-group">
                  <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
