--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -8,9 +8,8 @@
 		  <div class="form-group">
 		    <select name="roles" class="form-control" ng-model="$parent.formData.role" ng-change="search()">
 				<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-				<option value="ROLE_USER">User</option>
-				<option value="ROLE_ADMIN">Admin</option>
-				<option value="ROLE_SALE">Sale</option>
+			    <option ng-selected="{{ $parent.formData.role == option.authority }}"
+			    ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
 			</select>
 		  </div>
 		  <div class="form-group">
