--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -27,12 +27,12 @@
 				ng-change="notMatchRepassErrMsg = null" ng-disabled="isEdit" ng-required="!isEdit && !autoGen">
 			</div>
 			<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
-				<label class="control-label">{{'user.addpage.role' | translate}} *</label> 
+				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
 				<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
 					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-					<option value="ROLE_GATEWAY">Gateway</option>
-					<option value="ROLE_ADMIN">Admin</option>
-				</select>
+			      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
+			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+			    </select>
 			</div>
 			<div class="form-group">
                  <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
