update date-picker close

--- a/backend/src/main/webapp/app/views/vehicle/search.html
+++ b/backend/src/main/webapp/app/views/vehicle/search.html
@@ -27,7 +27,8 @@
 											current-text="{{'datepicker.today' | translate}}"
 											clear-text="{{'datepicker.clear' | translate}}"
 											close-text="{{'datepicker.close' | translate}}"
-											ng-model="formData.dateTimeStart" is-open="formData.openedStart" close-text="Close" style="margin-left: 15px;" /> 
+											ng-model="formData.dateTimeStart" is-open="formData.openedStart" 
+											style="margin-left: 15px;" /> 
 											<span class="input-group-btn">
 											<button type="button" class="btn btn-default" ng-click="openStart($event)" ng-disabled="isRealTime">
 												<i class="glyphicon glyphicon-calendar"></i>
@@ -45,7 +46,8 @@
 											current-text="{{'datepicker.today' | translate}}"
 											clear-text="{{'datepicker.clear' | translate}}"
 											close-text="{{'datepicker.close' | translate}}"
-											ng-model="formData.dateTimeEnd" is-open="formData.openedEnd" close-text="Close"  style="margin-left: 15px;" /> 
+											ng-model="formData.dateTimeEnd" is-open="formData.openedEnd" 
+											style="margin-left: 15px;" /> 
 											<span class="input-group-btn">
 											<button type="button" class="btn btn-default" ng-click="openEnd($event)" ng-disabled="isRealTime">
 												<i class="glyphicon glyphicon-calendar"></i>
