--- a/backend/src/main/webapp/app/views/vehicle/search.html
+++ b/backend/src/main/webapp/app/views/vehicle/search.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="panel-body">
                 	
-                	<div class="col-lg-4 col-lg-offset-4 vehicle-search-form-border">
+                	<div class="col-lg-4 col-lg-offset-4 vehicle-search-form-border well well-sm">
 						<form name="vehicleSearchForm" role="vehicleSearchForm" ng-submit="search()">
 							<div class="form-group">
 								<label class="control-label">{{'search.license_no' | translate}} </label>
@@ -95,38 +95,40 @@
 							</span>
 						</div>
 					</div>
-                	<div class="table-responsive col-lg-12">
-						<table class="table table-hover">
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>{{'search.table.header.license_no' | translate}}</th>
-									<th>{{'search.table.header.in_time' | translate}}</th>
-									<th>{{'search.table.header.out_time' | translate}}</th>
-									<th>{{'search.table.header.diff_time' | translate}}</th>
-									<th>{{'search.table.header.price' | translate}}</th>
-									<!-- <th>{{'search.table.header.device_id' | translate}}</th>
-									<th>{{'search.table.header.gate_name' | translate}}</th> -->
-									<th>{{'search.table.header.status' | translate}}</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr ng-repeat="v in vehicles track by $index">
-									<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
-									<td><code>{{ v.licenseNo }}</code></td>
-									<td>{{ v.inDateTime | date : 'dd-MM-yyyy HH:mm:ss'}}</td>
-									<td>{{ v.outDateTime | date : 'dd-MM-yyyy HH:mm:ss'}}</td>
-									<td>{{ timeDiff(v.dateTimeDiffMap) }}</td>
-									<td>{{ v.price != null ? v.price + '-' : '' }}</td>
-									<!-- <td>{{ v.deviceId }}</td>
-									<td>{{ v.gateName }}</td> -->
-									<td>
-										<i class="fa fa-arrow-circle-right fa-lg user-status-enabled-icon" ng-show="v.status == 0"></i>
-										<i class="fa fa-arrow-circle-left fa-lg user-status-disabled-icon" ng-show="v.status == 1"></i>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+					<div class="row col-lg-12">	
+	                	<div class="table-responsive">
+							<table class="table table-hover">
+								<thead>
+									<tr>
+										<th>#</th>
+										<th>{{'search.table.header.license_no' | translate}}</th>
+										<th>{{'search.table.header.in_time' | translate}}</th>
+										<th>{{'search.table.header.out_time' | translate}}</th>
+										<th>{{'search.table.header.diff_time' | translate}}</th>
+										<th>{{'search.table.header.price' | translate}}</th>
+										<!-- <th>{{'search.table.header.device_id' | translate}}</th>
+										<th>{{'search.table.header.gate_name' | translate}}</th> -->
+										<th>{{'search.table.header.status' | translate}}</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr ng-repeat="v in vehicles track by $index">
+										<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
+										<td><code>{{ v.licenseNo }}</code></td>
+										<td>{{ v.inDateTime | date : 'dd-MM-yyyy HH:mm:ss'}}</td>
+										<td>{{ v.outDateTime | date : 'dd-MM-yyyy HH:mm:ss'}}</td>
+										<td>{{ timeDiff(v.dateTimeDiffMap) }}</td>
+										<td>{{ v.price != null ? v.price + '-' : '' }}</td>
+										<!-- <td>{{ v.deviceId }}</td>
+										<td>{{ v.gateName }}</td> -->
+										<td>
+											<i class="fa fa-arrow-circle-right fa-lg user-status-enabled-icon" ng-show="v.status == 0"></i>
+											<i class="fa fa-arrow-circle-left fa-lg user-status-disabled-icon" ng-show="v.status == 1"></i>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
 				
                 </div>
