--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -82,6 +82,11 @@ text-decoration: none;
 background-color: #eee;
 }
 
+/* for Modal dialog scroll bar */
+body.modal-open {
+    overflow: auto;
+}
+
 
 /* [ui-view].ng-enter,[ui-view].ng-leave{
 	position:relative;left:0;right:0;transition:all .5s ease-in-out
