--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -1,7 +1,8 @@
+
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">Order</h1>
+			<h1 class="page-header">ระบบสั่งซื้อ</h1>
 		</div>
 	</div>
 	
@@ -9,38 +10,52 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-users fa-fw"></i> Order
-                    <button type="button" class="btn btn-warning btn-circle btn-lg pull-right" ng-click="gotoSelected()">
-                    	<i class="fa" ng-class="iconBtn"></i>
-                    </button>
+                    <i class="fa fa-users fa-fw"></i> ข้อมูลสั่งซื้อ
                 </div>
                 <div class="panel-body">
                 
                 
-	                	<form>
+					<form>
                 			<div class="col-md-6 well well-sm">
-								<div class="form-group">
-									<label for="exampleInputName2">ชื่อลูกค้า</label>
-								    <input type="text" class="form-control" id="exampleInputName2" placeholder="Customer">
-								</div>
-								<div class="form-group">
-									<label for="exampleInputEmail2">ที่อยู่</label>
-									<textarea class="form-control" rows="3" cols="30" placeholder="Address"></textarea>
-								</div>
-								
-								<div class="col-md-6">
-									<div class="form-group">
-										<label for="exampleInputName2">โทรศัพท์</label>
-									    <input type="text" class="form-control" id="exampleInputName2" placeholder="Tel.">
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="form-group">
-										<label for="exampleInputName2">โทรสาร</label>
-									    <input type="text" class="form-control" id="exampleInputName2" placeholder="Fax.">
-									</div>
+								<div class="form-group has-error">
+									<label class="control-label">ชื่อบริษัท</label>
+									<div class="input-group">
+							    		<span class="input-group-addon">
+							    			<i class="fa fa-bank fa-fw"></i>
+							    		</span>
+							    		<input type="text" class="form-control" placeholder="Customer">
+								  	</div>
 								</div>
 								
+								<div class="form-group has-error">
+									<label class="control-label">ที่อยู่</label>
+									<div class="input-group">
+							    		<span class="input-group-addon">
+							    			<i class="fa fa-envelope-o fa-fw"></i>
+							    		</span>
+							    		<textarea class="form-control" rows="3" cols="30" placeholder="Address"></textarea>
+								  	</div>
+								</div>
+								
+								<div class="form-group col-md-6">
+									<label class="control-label">โทรศัพท์</label>
+									<div class="input-group">
+							    		<span class="input-group-addon">
+							    			<i class="fa fa-phone fa-fw"></i>
+							    		</span>
+							    		 <input type="text" class="form-control" placeholder="Tel.">
+								  	</div>
+								</div>
+								
+								<div class="form-group col-md-6">
+									<label class="control-label">โทรสาร</label>
+									<div class="input-group">
+							    		<span class="input-group-addon">
+							    			<i class="fa fa-fax fa-fw"></i>
+							    		</span>
+							    		 <input type="text" class="form-control" placeholder="Fax.">
+								  	</div>
+								</div>
 								
 								<div class="col-md-6">
 									<div class="form-group">
@@ -100,9 +115,48 @@
 									</div>
 								</div>
 							</div>
-						</form>
-					
-                	
+							
+							
+							<!----------------------------------- Items --------------------------------------->
+							
+							<div class="col-lg-12">	
+								<div class="table-responsive">	
+									<table class="table table-striped table-hover">
+										<thead>
+											<tr>
+												<th>#</th>
+												<th>รายการ</th>
+												<th>รายละเอียดสินค้า</th>
+												<th>จำนวน</th>
+												<th>ราคาต่อหน่วย</th>
+												<th>จำนวนเงิน</th>
+												<th></th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr ng-repeat="i in items track by $index">
+												<td>{{ $index + 1}}</td>
+												<td>{{ i.itemName }}</td>
+												<td>{{ i.itemDetail }}</td>
+												<td>{{ i.amount }}</td>
+												<td>{{ i.unitPrice }}</td>
+												<td>{{ i.price }}</td>
+												<td>
+													<i class="fa fa-times fa-lg user-action-icon" ng-click="deleteUser(u.id)"></i>&emsp;
+													<i class="fa fa-edit fa-lg user-action-icon" ng-click="editUser(u)"></i>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+														
+							
+						<div class="col-md-12" style="text-align: center;">
+							<button type="button" class="btn btn-outline btn-primary" ng-click="open()">Add Items {{ selected }}</button>
+						</div>
+							
+					</form>
                 </div>
                 <div class="panel-footer"></div>
             </div>
