--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -16,6 +16,8 @@
                 
                 
 					<form>
+						<div class="col-md-12 well well-sm">
+						
                 			<div class="col-md-6 well well-sm">
 								<div class="form-group has-error">
 									<label class="control-label">ชื่อบริษัท</label>
@@ -71,9 +73,11 @@
 								</div>
 							</div>
 							
+							
+							
 							<!-- Separated column -->
 							
-							<div class="col-md-5 well well-sm" style="margin-left: 20px;">
+							<div class="col-md-5 well well-sm" style="margin-left: 10px;">
 								<div class="col-md-6">
 									<div class="form-group">
 										<label for="exampleInputName2">วันที่</label>
@@ -116,6 +120,7 @@
 								</div>
 							</div>
 							
+						</div>
 							
 							<!----------------------------------- Items --------------------------------------->
 							
