--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -18,7 +18,7 @@
 					<form>
 						<div class="col-md-12 well well-sm">
 						
-                			<div class="col-md-6 well well-sm">
+                			<div class="col-md-6 well well-sm" style="background-color: #FFFFFF;">
 								<div class="form-group has-error">
 									<label class="control-label">ชื่อบริษัท</label>
 									<div class="input-group">
@@ -77,7 +77,7 @@
 							
 							<!-- Separated column -->
 							
-							<div class="col-md-5 well well-sm" style="margin-left: 10px;">
+							<div class="col-md-5 well well-sm" style="margin-left: 10px; background-color: #FFFFFF;">
 								<div class="col-md-6">
 									<div class="form-group">
 										<label for="exampleInputName2">วันที่</label>
