--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -46,7 +46,7 @@
 	
 <div class="row col-lg-12">	
 	<div class="table-responsive">	
-		<table class="table table-hover">
+		<table class="table table-striped table-hover">
 			<thead>
 				<tr>
 					<th>#</th>
