--- a/backend/src/main/webapp/app/views/vehicle/search.html
+++ b/backend/src/main/webapp/app/views/vehicle/search.html
@@ -122,8 +122,8 @@
 										<!-- <td>{{ v.deviceId }}</td>
 										<td>{{ v.gateName }}</td> -->
 										<td>
-											<i class="fa fa-arrow-circle-right fa-lg user-status-enabled-icon" ng-show="v.status == 0"></i>
-											<i class="fa fa-arrow-circle-left fa-lg user-status-disabled-icon" ng-show="v.status == 1"></i>
+											<i class="fa fa-sign-in fa-lg user-status-enabled-icon" ng-show="v.status == 0"></i>
+											<i class="fa fa-sign-out fa-lg user-status-disabled-icon" ng-show="v.status == 1"></i>
 										</td>
 									</tr>
 								</tbody>
