--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -2,7 +2,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">ระบบสั่งซื้อ</h1>
+			<h1 class="page-header">สั่งซื้อ</h1>
 		</div>
 	</div>
 	
@@ -10,15 +10,15 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-users fa-fw"></i> ข้อมูลสั่งซื้อ
+                    <i class="fa fa-file-text-o fa-fw"></i> ข้อมูลการสั่งซื้อ
                 </div>
                 <div class="panel-body">
                 
                 
 					<form>
-						<div class="col-md-12 well well-sm">
+						<div class="col-md-12 well well-sm" style="background-color:#FFFFFF;">
 						
-                			<div class="col-md-6 well well-sm" style="background-color: #FFFFFF;">
+                			<div class="col-md-6 well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 								<div class="form-group has-error">
 									<label class="control-label">ชื่อบริษัท</label>
 									<div class="input-group">
@@ -30,7 +30,7 @@
 								</div>
 								
 								<div class="form-group has-error">
-									<label class="control-label">ที่อยู่</label>
+									<label class="control-label">ที่อยู่บริษัท</label>
 									<div class="input-group">
 							    		<span class="input-group-addon">
 							    			<i class="fa fa-envelope-o fa-fw"></i>
@@ -61,14 +61,30 @@
 								
 								<div class="col-md-6">
 									<div class="form-group">
-										<label for="exampleInputName2">เรียน</label>
-									    <input type="text" class="form-control" id="exampleInputName2" placeholder="Contact">
+										<label>เรียน</label>
+									    <input type="text" class="form-control" placeholder="Contact">
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
-										<label for="exampleInputName2">ติดต่อ</label>
-									    <input type="text" class="form-control" id="exampleInputName2" placeholder="E-mail">
+										<label>ชื่อผู้ติดต่อ</label>
+									    <input type="text" class="form-control" placeholder="Orderer Name">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label>ข้อมูลผู้ติดต่อ</label>
+									    <input type="text" class="form-control" placeholder="Tel. or Email">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label>ชื่อ Sale</label>
+										<select class="form-control">
+											<option value="">กรุณาเลือก Sale</option>
+										    <option value="1">กรกนก</option>
+										    <option value="1">พงพัน</option>
+										</select>
 									</div>
 								</div>
 							</div>
@@ -77,7 +93,7 @@
 							
 							<!-- Separated column -->
 							
-							<div class="col-md-5 well well-sm" style="margin-left: 10px; background-color: #FFFFFF;">
+							<div class="col-md-5 well well-sm" style="margin-left: 25px; background-color:rgba(51, 122, 183, 0.1);">
 								<div class="col-md-6">
 									<div class="form-group">
 										<label for="exampleInputName2">วันที่</label>
