--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -1,6 +1,6 @@
 
-<div class="row col-lg-12">
-	<div class="well well-sm">
+<div class="col-lg-12">
+	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 		<form class="form-inline">
 		  <div class="form-group">
 		    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName" ng-keyup="search()">
@@ -25,7 +25,7 @@
 	</div>
 </div>
 
-<div class="row col-lg-12">
+<div class="col-lg-12">
 	<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
 		<span class="input-group-addon" style="border: 0px; background: none;">
 			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
@@ -44,7 +44,7 @@
 	</div>
 </div>
 	
-<div class="row col-lg-12">	
+<div class="col-lg-12">	
 	<div class="table-responsive">	
 		<table class="table table-striped table-hover">
 			<thead>
