--- a/backend/src/main/webapp/app/views/vehicle/search.html
+++ b/backend/src/main/webapp/app/views/vehicle/search.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="panel-body">
                 	
-                	<div class="col-lg-4 col-lg-offset-4 vehicle-search-form-border well well-sm">
+                	<div class="col-lg-4 col-lg-offset-4 vehicle-search-form-border well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 						<form name="vehicleSearchForm" role="vehicleSearchForm" ng-submit="search()">
 							<div class="form-group">
 								<label class="control-label">{{'search.license_no' | translate}} </label>
@@ -77,7 +77,7 @@
 							</div>
 						</form>
 					</div>
-					<div class="row col-lg-12">
+					<div class="col-lg-12">
 						<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
 							<span class="input-group-addon" style="border: 0px; background: none;">
 								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
@@ -95,7 +95,7 @@
 							</span>
 						</div>
 					</div>
-					<div class="row col-lg-12">	
+					<div class="col-lg-12">	
 	                	<div class="table-responsive">
 							<table class="table table-hover">
 								<thead>
