--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -81,7 +81,7 @@
 									<div class="form-group">
 										<label>ชื่อ Sale</label>
 										<select class="form-control">
-											<option value="">กรุณาเลือก Sale</option>
+											<option value="">--- กรุณาเลือก Sale ---</option>
 										    <option value="1">กรกนก</option>
 										    <option value="1">พงพัน</option>
 										</select>
