--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -22,6 +22,13 @@
 						</div>
 						<form role="form" name="profileForm" ng-submit="updateProfile()">
 							<div class="col-md-6 well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+									<div class="form-group" ng-class="{'has-error': profileForm.userNameShow.$invalid  || existingUserShowErrMsg}">
+										<label class="control-label">{{'profile.username_show' | translate}} *</label>
+										<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
+											<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
+										</span>
+										<input name="userNameShow" class="form-control" ng-model="data.usernameShow" ng-change="existingUserShowErrMsg = null" required>
+									</div>
 									<div class="form-group" ng-class="{'has-error': profileForm.userName.$invalid  || existingUserErrMsg}">
 										<label class="control-label">{{'profile.username' | translate}} *</label>
 										<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
