--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -1,3 +1,9 @@
+.profile-label{
+	padding: 10px 50px 10px 50px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
 .user-action-icon {
 	color: #337AB7; cursor: pointer;
 }
